--- a/homestyle.css
+++ b/homestyle.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(173, 176, 177);
     font-family: Arial, Helvetica, sans-serif;
   }
   
@@ -7,10 +7,54 @@ h1 {
     color: navy;
   }
 
-p {
-    margin: 25px 50px 75px 100px;
+/* Style the navigation menu */
+.navbar {
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
 }
+
+/* Navigation links */
+.navbar a {
+  float: left;
+  padding: 12px;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+  width: 16.67%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
+  text-align: center; /* If you want the text to be centered */
+}
+
+/* Add a background color on mouse-over */
+.navbar a:hover {
+  background-color: #000;
+}
+
+/* Style the current/active link */
+.navbar a.active {
+  background-color: #04AA6D;
+}
+
+/* Add responsiveness - on screens less than 500px, make the navigation links appear on top of each other, instead of next to each other */
+@media screen and (max-width: 500px) {
+  .navbar a {
+    float: none;
+    display: block;
+    width: 100%;
+    text-align: left; /* If you want the text to be left-aligned on small screens */
+  }
+}
+
+
 
 table {
     text-align: center;
+    border-collapse: separate;
+    border-spacing: 50px 0;
+    border-style: solid;
+    border-width: 5px 20px; /* 5px top and bottom, 20px on the sides */
+  }
+  
+td {
+    padding: 10px 0;
   }
