--- a/home_and_customfonts.css
+++ b/home_and_customfonts.css
@@ -13,17 +13,51 @@
 }
 
 body {
-  background-color: rgb(214, 187, 172);
+  background-color: rgb(247, 242, 240);
+  margin: 0;
+}
+
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(16, 60, 191);
+}
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+  font-family: 'DMSans';
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {
+  background-color: #ffffff;
+  color:rgb(16, 60, 191);
+}
+
+ul.topnav li a.active {background-color: #e67e39;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
 }
 
 h1 {
   font-family: 'SpaceGrotesk';
-  color: rgb(3, 49, 85);
+  color: rgb(16, 60, 191);
   text-align: center;
 }
 
 h2 {
   font-family: 'DMSans';
-  color: rgb(3, 49, 85);
+  color: rgb(16, 60, 191);
   text-align: center;
 }
