--- a/dog_database/src/App.css
+++ b/dog_database/src/App.css
@@ -19,12 +19,22 @@
     font-family: 'Candal';
   }
 
+  .SiteIcon {
+    font-family: 'Candal';
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 2px;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-decoration-style: dotted;
+    color: rgb(236, 140, 83)
+  }
+
   .navbar-brand {
-    color: rgb(201, 197, 197);
+    color: rgb(255, 255, 255);
     text-align: center;
     margin-left: 15px;
-    text-decoration-line: underline;
-    text-decoration-style: dotted;
   }
 
   .navbar-brand:hover {
@@ -48,19 +58,15 @@
       position: sticky;
       padding: 10px 16px;
       top: 0;
+    --bs-navbar-toggler-padding-x: -.5rem;
     --bs-navbar-padding-x: 0;
     --bs-navbar-padding-y: 0.5rem;
     --bs-navbar-color: rgb(255, 255, 255);
     --bs-navbar-hover-color: rgb(250, 119, 43);
-    --bs-navbar-active-color: black;
     --bs-navbar-disabled-color: rgb(250, 119, 43);
     --bs-navbar-toggler-border-color: rgb(33, 120, 201);
     z-index: 9999;
 }
-
-  span.navbar-toggler {
-    color: white;
-  }
 
   .FirstSection {
     text-align: center;
