--- a/dog_database/src/App.css
+++ b/dog_database/src/App.css
@@ -12,6 +12,13 @@
     font-family: 'DMSans';
   }
 
+  html,body {
+    height:100vh;
+    width:100vw;
+    margin: 0;
+    padding: 0;
+  }
+
   .Title, .h1 {
     text-align: center;
     font-size: 56px;
@@ -45,8 +52,6 @@
     text-align: center;
     margin-bottom: 25px;
     color:rgb(33, 120, 201);
-    text-decoration: underline;
-    text-decoration-style: solid;
   }
 
   .bg-body-tertiary {
@@ -103,12 +108,4 @@
   .rounded {
     border: 5px solid #000000;
     margin-bottom: 15px;
-  }
-
-  .vertical-center {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
   }
