--- a/dog_database/src/datastyles.css
+++ b/dog_database/src/datastyles.css
@@ -4,8 +4,19 @@
     flex-direction: column;
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 8px 10px;
     box-sizing: border-box;
+}
+
+.inputstyle {
+    border-radius: 25px;
+    width: 300px;
+    height: 37.5px;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 10px
 }
 
 .centertable {
@@ -28,10 +39,33 @@
     border-radius: 25px;
     border-color: rgb(33, 120, 201);
     background: rgb(33, 120, 201);
-    width: 400px;
-    height: 50px;
+    width: 320px;
+    height: 40px;
     display: table-cell;
     vertical-align: middle;
+    margin-left: 5px;
+    margin-right: 5px
+}
+
+.deletebutton {
+    color: white;
+    border-radius: 25px;
+    border-color: rgb(33, 120, 201);
+    background: rgb(33, 120, 201);
+    width: 320px;
+    height: 40px;
+    display: table-cell;
+    vertical-align: middle;
+    margin-left: 5px;
+    margin-right: 5px
+}
+
+.addbutton:hover {
+    color: rgba(250, 119, 43, 1.0);
+}
+
+.deletebutton:hover {
+    color: rgba(250, 119, 43, 1.0);
 }
 
 a {
